add multiple pages, images, embedded styling

--- a/index.html
+++ b/index.html
@@ -1,10 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Odin Recipes</title>
-    </head>
-    <body>
-        <h1>Odin Recipes</h1>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Odin Recipes</title>
+    <style>
+        body {
+            text-align: center;
+            font-family: Arial, sans-serif;
+            padding-top: 18%;
+        }
+
+        h1 {
+            font-size: 46px;
+        }
+
+        .recipe-container {
+            display: inline-block;
+            margin: 20px 0;
+        }
+
+        img {
+            display: block;
+            margin: 0 auto;
+            padding: 15% 15% 5%;
+        }
+
+        a {
+            display: block;
+            margin-top: 10px;
+            text-decoration: none;
+            color: #333;
+        }
+    </style>
+</head>
+<body>
+    <h1>Odin Recipes</h1>
+
+    <div class="recipe-container">
+        <img src="assets/imgs/lasagna.jpg" alt="Tasty homemade lasagna" width="150px">
+        <a href="recipes/lasagna.html">Homemade Lasagna</a>
+    </div>
+
+    <div class="recipe-container">
+        <img src="assets/imgs/pad_thai.jpg" alt="Spicy Pad-Thai" width="150px">
+        <a href="recipes/pad_thai.html">Spicy Pad-Thai</a>
+    </div>
+
+    <div class="recipe-container">
+        <img src="assets/imgs/jerk_chicken.jpeg" alt="Jamaican Jerk Chicken" width="150px">
+        <a href="recipes/jerk_chicken.html">Jamaican Jerk Chicken</a>
+    </div>
+</body>
 </html>
