--- a/recipes/jerk_chicken.html
+++ b/recipes/jerk_chicken.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Lasagna Recipe</title>
+        <title>Jamaican Jerk Chicken Recipe</title>
     </head>
     <body>
-        <h1>Homemade Lasagna</h1>
+        <h1>Jamaican Jerk Chicken</h1>
     </body>
 </html>
