--- a/recipes/pad_thai.html
+++ b/recipes/pad_thai.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Lasagna Recipe</title>
+        <title>Pad-Thai Recipe</title>
     </head>
     <body>
-        <h1>Homemade Lasagna</h1>
+        <h1>Spicy Pad-Thai</h1>
     </body>
 </html>
