add content to individual recipe page - lasagna

--- a/recipes/jerk_chicken.html
+++ b/recipes/jerk_chicken.html
@@ -3,8 +3,28 @@
     <head>
         <meta charset="UTF-8">
         <title>Jamaican Jerk Chicken Recipe</title>
+        <style>
+            body {
+                text-align: center;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+        </style>
     </head>
     <body>
         <h1>Jamaican Jerk Chicken</h1>
+        <img src="/assets/imgs/jerk_chicken.jpeg"  width="300px">
+        <h3>Description</h3>
+        <p>
+            Desc of recipe
+        </p>
+
+        <h4>Ingredients</h4>
+        <ul>
+            <li></li>
+        </ul>
+        <h4>Steps</h4>
+        <ol>
+            <li></li>
+        </ol>
     </body>
 </html>
