--- a/index.html
+++ b/index.html
@@ -16,21 +16,28 @@
 
         .recipe-container {
             display: inline-block;
-            margin: 20px 0;
+            margin: auto 0;
         }
 
         img {
             display: block;
             margin: 0 auto;
             padding: 15% 15% 5%;
+            max-width: 100%;
         }
 
         a {
             display: block;
-            margin-top: 10px;
+            margin-top: 10%;
             text-decoration: none;
             color: #333;
         }
+
+        a:hover {
+            color:cadetblue;
+            text-decoration: underline;
+        }
+        
     </style>
 </head>
 <body>
