--- a/recipes/pad_thai.html
+++ b/recipes/pad_thai.html
@@ -3,8 +3,28 @@
     <head>
         <meta charset="UTF-8">
         <title>Pad-Thai Recipe</title>
+        <style>
+            body {
+                text-align: center;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+        </style>
     </head>
     <body>
         <h1>Spicy Pad-Thai</h1>
+        <img src="/assets/imgs/pad_thai.jpg"  width="300px">
+        <h3>Description</h3>
+        <p>
+            Desc of recipe
+        </p>
+
+        <h4>Ingredients</h4>
+        <ul>
+            <li></li>
+        </ul>
+        <h4>Steps</h4>
+        <ol>
+            <li></li>
+        </ol>
     </body>
 </html>
