add content to recipe pages - jerkchicken and pad-thai

--- a/recipes/jerk_chicken.html
+++ b/recipes/jerk_chicken.html
@@ -4,27 +4,62 @@
         <meta charset="UTF-8">
         <title>Jamaican Jerk Chicken Recipe</title>
         <style>
-            body {
+            body, h1, h2, h3 {
                 text-align: center;
                 font-family: Arial, Helvetica, sans-serif;
+            }
+
+            p {
+                text-align: center;
+                margin: 2% 20% 4%;
+            }
+
+            ol, ul {
+                text-align: left;
+                margin: 2% 20% 4%;
+            }
+
+            li {
+                padding-bottom: 2%;
+            }
+
+            hr {
+                margin: 1% 15% 1%;
             }
         </style>
     </head>
     <body>
         <h1>Jamaican Jerk Chicken</h1>
-        <img src="/assets/imgs/jerk_chicken.jpeg"  width="300px">
-        <h3>Description</h3>
+        <img src="/assets/imgs/jerk_chicken.jpeg" width="50%">
+        
+        <h2>Description</h2>
         <p>
-            Desc of recipe
+            This baked jerk chicken is not too sweet, not too spicy. I was on the hunt for a perfect jerk seasoning and ended up making my own blend. Hope you like it!
         </p>
-
-        <h4>Ingredients</h4>
+        <hr>
+        <h2>Ingredients</h2>
         <ul>
-            <li></li>
+            <li><strong>Salt</strong>: 1 teaspoon, or to taste</li>
+            <li><strong>Ground allspice</strong>: 1 teaspoon</li>
+            <li><strong>Brown sugar</strong>: 1 teaspoon, packed</li>
+            <li><strong>Onion powder</strong>: 1 teaspoon</li>
+            <li><strong>Dried minced garlic</strong>: ½ teaspoon</li>
+            <li><strong>Ground nutmeg</strong>: ½ teaspoon</li>
+            <li><strong>Black pepper</strong>: ½ teaspoon</li>
+            <li><strong>Ground ginger</strong>: ½ teaspoon</li>
+            <li><strong>Cayenne pepper</strong>: ¼ teaspoon</li>
+            <li><strong>Ground cinnamon</strong>: ¼ teaspoon</li>
+            <li><strong>Dried thyme leaves</strong>: ¼ teaspoon</li>
+            <li><strong>Whole chicken</strong>: 1 (2 to 3 pound), cut into pieces</li>
+            <li><strong>Vegetable oil</strong>: ¼ cup</li>
         </ul>
-        <h4>Steps</h4>
+
+        <h3>Steps</h3>
         <ol>
-            <li></li>
+            <li>Mix all spices in a large bowl; add chicken pieces and toss to coat. Marinate in the refrigerator for 2 to 4 hours.</li>
+            <li>Preheat oven to 350°F (175°C). Pour vegetable oil into a 9x13-inch baking dish.</li>
+            <li>Place chicken pieces skin-side up in the baking dish. Bake until juices run clear, about 1 hour 20 minutes. Chicken should reach an internal temperature of 165°F (74°C).</li>
+            <li>Turn the oven to broil, and cook until the skin crisps, about 2 to 5 minutes.</li>
         </ol>
     </body>
 </html>
