--- a/recipes/pad_thai.html
+++ b/recipes/pad_thai.html
@@ -4,27 +4,64 @@
         <meta charset="UTF-8">
         <title>Pad-Thai Recipe</title>
         <style>
-            body {
+            body, h1, h2, h3 {
                 text-align: center;
                 font-family: Arial, Helvetica, sans-serif;
+            }
+
+            p {
+                text-align: center;
+                margin: 2% 20% 4%;
+            }
+
+            ol, ul {
+                text-align: left;
+                margin: 2% 20% 4%;
+            }
+
+            li {
+                padding-bottom: 2%;
+            }
+
+            hr {
+                margin: 1% 15% 1%;
             }
         </style>
     </head>
     <body>
         <h1>Spicy Pad-Thai</h1>
-        <img src="/assets/imgs/pad_thai.jpg"  width="300px">
-        <h3>Description</h3>
+        <img src="/assets/imgs/pad_thai.jpg" width="50%">
+        <h2>Description</h2>
         <p>
-            Desc of recipe
+            This is an authentic pad thai recipe with rice noodles, chicken, peanuts, and stir-fried eggs in a traditional tamarind sauce. Garnish with fresh bean sprouts and chives. This recipe was inspired by the pad thai at Thai Tom.
         </p>
-
-        <h4>Ingredients</h4>
+        <hr>
+        <h2>Ingredients</h2>
         <ul>
-            <li></li>
+            <li><strong>Rice noodles</strong>: 12 ounces dried</li>
+            <li><strong>White sugar</strong>: ½ cup</li>
+            <li><strong>Distilled white vinegar</strong>: ½ cup</li>
+            <li><strong>Fish sauce</strong>: ¼ cup</li>
+            <li><strong>Tamarind paste</strong>: 2 tablespoons</li>
+            <li><strong>Vegetable oil</strong>: 2 tablespoons, divided</li>
+            <li><strong>Chicken breast</strong>: 2 boneless, skinless, sliced into thin strips</li>
+            <li><strong>Garlic</strong>: 1 ½ teaspoons, minced</li>
+            <li><strong>Eggs</strong>: 4 large, beaten</li>
+            <li><strong>Salt</strong>: 1 ½ teaspoons</li>
+            <li><strong>Peanuts</strong>: 1 cup, coarsely ground</li>
+            <li><strong>Bean sprouts</strong>: 2 cups</li>
+            <li><strong>Fresh chives</strong>: ½ cup, chopped</li>
+            <li><strong>Paprika</strong>: 1 tablespoon, or to taste</li>
+            <li><strong>Lime</strong>: 1 medium, cut into wedges</li>
         </ul>
-        <h4>Steps</h4>
+
+        <h3>Steps</h3>
         <ol>
-            <li></li>
+            <li>Place rice noodles into a large bowl and cover with several inches of room temperature water; let soak for 30 to 60 minutes. Drain.</li>
+            <li>Whisk ½ cup sugar, vinegar, fish sauce, and tamarind paste together in a saucepan over medium heat. Bring to a simmer, then remove from heat.</li>
+            <li>Heat 1 tablespoon oil in a skillet over medium-high heat. Add chicken; cook and stir until no longer pink in the center and juices run clear, 5 to 7 minutes. Remove from heat.</li>
+            <li>Heat remaining 1 tablespoon oil in a large skillet or wok over medium-high heat. Add garlic and cook until fragrant, about 1 minute. Stir in eggs; scramble until nearly cooked through, about 2 minutes. Add chicken and rice noodles and stir until well combined.</li>
+            <li>Stir in tamarind mixture, 1 ½ tablespoons sugar, and salt; cook until noodles are tender, 3 to 5 minutes. Stir in peanuts and cook until heated through, 1 to 2 minutes. Garnish with bean sprouts, chives, and paprika; serve with lime wedges.</li>
         </ol>
     </body>
 </html>
