refactor style to external css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
-    <style>
+    <link rel="stylesheet" href="styles.css">
+   <!-- <style>
         body {
             text-align: center;
             font-family: Arial, sans-serif;
@@ -38,24 +39,29 @@
             text-decoration: underline;
         }
         
-    </style>
+    </style>-->
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <heading class="heading">
+        <h1>Odin Recipes</h1>
+    </heading>
+    
 
     <div class="recipe-container">
-        <img src="assets/imgs/lasagna.jpg" alt="Tasty homemade lasagna" width="150px">
-        <a href="recipes/lasagna.html">Homemade Lasagna</a>
-    </div>
+        <div class="recipe">
+            <img src="assets/imgs/lasagna.jpg" alt="Tasty homemade lasagna">
+            <a href="recipes/lasagna.html">Homemade Lasagna</a>
+        </div>
 
-    <div class="recipe-container">
-        <img src="assets/imgs/pad_thai.jpg" alt="Spicy Pad-Thai" width="150px">
-        <a href="recipes/pad_thai.html">Spicy Pad-Thai</a>
-    </div>
+        <div class="recipe">
+            <img src="assets/imgs/pad_thai.jpg" alt="Spicy Pad-Thai">
+            <a href="recipes/pad_thai.html">Spicy Pad-Thai</a>
+        </div>
 
-    <div class="recipe-container">
-        <img src="assets/imgs/jerk_chicken.jpeg" alt="Jamaican Jerk Chicken" width="150px">
-        <a href="recipes/jerk_chicken.html">Jamaican Jerk Chicken</a>
+        <div class="recipe">
+            <img src="assets/imgs/jerk_chicken.jpeg" alt="Jamaican Jerk Chicken">
+            <a href="recipes/jerk_chicken.html">Jamaican Jerk Chicken</a>
+        </div>
     </div>
 </body>
 </html>
