add flexbox styling

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     </style>-->
 </head>
 <body>
-    <heading class="heading">
+    <header class="heading">
         <h1>Odin Recipes</h1>
-    </heading>
+    </header>
     
 
     <div class="recipe-container">
